--- a/plot_runs.Rmd
+++ b/plot_runs.Rmd
@@ -30,7 +30,7 @@ week.dist$date=as.Date(week.dist$date)
 ggplot(data=week.dist,aes(x=date, y=dist,group = 1))+
   geom_line(color="magenta")+
   geom_point(data=runevents, aes(x=Date, y=Dist..mi.))+
-  geom_smooth(data=runevents,  aes(x=Date, y=Dist..mi.),color = "blue")
+  geom_smooth(data=runevents,  aes(x=Date, y=Dist..mi.),color = "green")
 
 ```
 ```{r}
