Magenta is naff. I am using red and blue.

--- a/plot_runs.Rmd
+++ b/plot_runs.Rmd
@@ -28,9 +28,9 @@ week.dist=aggregate(list(dist = runevents$Dist..mi.),
 week.dist$date=as.Date(week.dist$date)
 
 ggplot(data=week.dist,aes(x=date, y=dist,group = 1))+
-  geom_line(color="magenta")+
+  geom_line(color="blue")+
   geom_point(data=runevents, aes(x=Date, y=Dist..mi.))+
-  geom_smooth(data=runevents,  aes(x=Date, y=Dist..mi.),color = "green")
+  geom_smooth(data=runevents,  aes(x=Date, y=Dist..mi.),color = "red")
 
 ```
 ```{r}
